--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -204,6 +204,20 @@
 			</activation>
 			<dependencies>
 				<dependency>
+					<groupId>${project.groupId}</groupId>
+					<artifactId>appserver</artifactId>
+					<version>2.2.1-SNAPSHOT</version>
+					<type>tar.gz</type>
+					<classifier>${platform}-x86</classifier>
+				</dependency>
+				<dependency>
+					<groupId>${project.groupId}</groupId>
+					<artifactId>appserver</artifactId>
+					<version>2.2.1-SNAPSHOT</version>
+					<type>tar.gz</type>
+					<classifier>${platform}-x64</classifier>
+				</dependency>
+				<dependency>
 					<groupId>com.digia</groupId>
 					<version>5.2.1-SNAPSHOT</version>
 					<artifactId>qt</artifactId>
@@ -284,6 +298,13 @@
 					<type>tar.gz</type>
 					<classifier>${qt.classifier}${compile.options}</classifier>
 				</dependency>
+				<dependency>
+					<groupId>${project.groupId}</groupId>
+					<artifactId>appserver</artifactId>
+					<version>2.2.1-SNAPSHOT</version>
+					<type>tar.gz</type>
+					<classifier>${profile.classifier}</classifier>
+				</dependency>				
 			</dependencies>
 		</profile>  		
 		<profile>
