--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <build.configuration>release</build.configuration>
         <buildNumber>0</buildNumber>
         <skip.sign>true</skip.sign>
+		<finalName>${deb.customization.company.name}-${project.artifactId}-${release.version}.${buildNumber}-${platform}-${arch}-${build.configuration}-beta</finalName>
         <beta>true</beta>
         <!-- compile.option1. See profile no-webkit -->
         <webkit>true</webkit>
@@ -105,7 +106,7 @@
 
     <build>
         <defaultGoal>install</defaultGoal>
-        <finalName>${deb.customization.company.name}-${project.artifactId}-${release.version}.${buildNumber}-${platform}-${arch}-${build.configuration}-beta</finalName>
+        <finalName>${finalName}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
