appserver artifact removed from edge build one more time
<==== Mercurial data ====>
Branch: master

--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -348,6 +348,10 @@
 					<family>unix</family>
 					<name>linux</name>
 				</os> 
+				<property>
+					<name>arch</name>
+					<value>!arm</value>
+				</property>
 			</activation>
 			<dependencies>
 				<dependency>
