Add Qulu signing identity and provisioning profile
<==== Mercurial data ====>
Branch: release_2.2.1

--- a/.hgignore
+++ b/.hgignore
@@ -228,6 +228,7 @@ android-client/**/gen/*
 android-client/android-main/libs/*.jar
 
 ios-client/build
+ios-client/stage
 ios-client/dist
 ios-client/target
 ios-client/ihdwitness.xcworkspace/xcuserdata
