Fixing pom.xml after Boris's merge. Boris, is this fix is required in default?
<==== Mercurial data ====>
Branch: master

--- a/cpp/pom.xml
+++ b/cpp/pom.xml
@@ -203,6 +203,7 @@
                                             <value><![CDATA[<WarningLevel>Level3</WarningLevel><Optimization>Disabled</Optimization>]]></value>
                                         </replacement>
  
+                                        <!-- <replacement>
                                             <token>
                                                 <![CDATA[</RootNamespace>]]></token>
                                             <value>
