--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,7 @@
                 <platform>windows</platform>
                 <compiler>msvc2012u3</compiler>
                 <arch>x64</arch>
+				<box>win78</box>
                 <force_x86>false</force_x86>
                 <qt.spec>win32-msvc2012</qt.spec>
 				<PlatformToolSet>v110</PlatformToolSet>
