--- a/wixsetup/pom.xml
+++ b/wixsetup/pom.xml
@@ -20,7 +20,7 @@
     </properties>
 
     <build>
-        <finalName>${namespace.additional}-${release.version}.${buildNumber}-${platform}-${arch}-${build.configuration}-${install.type}-beta</finalName>
+        <finalName>${namespace.additional}-${release.version}.${buildNumber}-${box}-${arch}-${build.configuration}-${install.type}-beta</finalName>
         <directory>${arch}</directory>
         <sourceDirectory>${basedir}</sourceDirectory>
         <plugins>
