pom fixes for android
<==== Mercurial data ====>
Branch: mobile_client

--- a/cpp/pom.xml
+++ b/cpp/pom.xml
@@ -363,6 +363,15 @@
             <build>
                 <directory>${arch}-${box}</directory>
             </build>
-        </profile> 		
+        </profile>
+        <profile>
+            <id>android-qt</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <directory>${arch}</directory>
+            </build>
+        </profile>
     </profiles>	
 </project>
