--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -432,8 +432,11 @@
             <id>android-qt</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
+                <os>
+                    <family>unix</family>
+                </os>
                 <property>
-                    <name>platform</name>
+                    <name>mobile</name>
                     <value>android</value>
                 </property>
             </activation>
