--- a/pom.xml
+++ b/pom.xml
@@ -562,6 +562,13 @@
             <id>android-qt</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
+                <os>
+                    <family>unix</family>
+                </os>
+                <property>
+                    <name>mobile</name>
+                    <value>android</value>
+                </property>
             </activation>
             <properties>
                 <platform>android</platform>
