in addition to the previous commit
<==== Mercurial data ====>
Branch: mobile_client

--- a/cpp/pom.xml
+++ b/cpp/pom.xml
@@ -368,6 +368,13 @@
             <id>android-qt</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
+                <os>
+                    <family>unix</family>
+                </os>
+                <property>
+                    <name>mobile</name>
+                    <value>android</value>
+                </property>
             </activation>
             <build>
                 <directory>${arch}</directory>
