--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -465,8 +465,31 @@
 				</dependency>
 			</dependencies>
 		</profile>
+
+        <!-- Mobile client profiles -->
         <profile>
-            <id>android-qt</id>
+            <id>mobile-common</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <os>
+                    <family>unix</family>
+                </os>
+                <property>
+                    <name>mobile</name>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.digia</groupId>
+                    <version>5.3.1-SNAPSHOT</version>
+                    <artifactId>qt</artifactId>
+                    <type>tar.gz</type>
+                    <classifier>${qt.classifier}${compile.options}</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>mobile-android</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
                 <os>
@@ -479,18 +502,33 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>com.digia</groupId>
-                    <version>5.3.1-SNAPSHOT</version>
-                    <artifactId>qt</artifactId>
-                    <type>tar.gz</type>
-                    <classifier>${qt.classifier}${compile.options}</classifier>
-                </dependency>
-                <dependency>
                     <groupId>org.openssl</groupId>
                     <artifactId>openssl</artifactId>
                     <version>1.0.0-SNAPSHOT</version>
                     <type>tar.gz</type>
                     <classifier>${profile.classifier}</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>mobile-android-on-desktop</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <os>
+                    <family>unix</family>
+                </os>
+                <property>
+                    <name>mobile</name>
+                    <value>android-on-desktop</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.openssl</groupId>
+                    <artifactId>openssl</artifactId>
+                    <version>${openssl.version}</version>
+                    <type>tar.gz</type>
+                    <classifier>${profile.classifier}-${compiler}</classifier>
                 </dependency>
             </dependencies>
         </profile>
