--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -524,6 +524,13 @@
             </activation>
             <dependencies>
                 <dependency>
+                    <groupId>com.digia</groupId>
+                    <version>5.2.1-SNAPSHOT</version>
+                    <artifactId>qt</artifactId>
+                    <type>tar.gz</type>
+                    <classifier>${qt.classifier}${compile.options}</classifier>
+                </dependency>
+                <dependency>
                     <groupId>org.openssl</groupId>
                     <artifactId>openssl</artifactId>
                     <version>${openssl.version}</version>
