--- a/mobile_client/pom.xml
+++ b/mobile_client/pom.xml
@@ -20,7 +20,7 @@
         <global.libs>-lcommon -lappserver2 -lquazip -lssl -lcrypto</global.libs>
         <!--Specific os libs used-->
         <linux.oslibs>-lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lFestival -lestools -leststring -lestbase -lmp3lame -lz -lopenal -lX11 -lXfixes -lGL -lGLU -ltermcap -lsigar -lfaac</linux.oslibs>
-        <android.oslibs></android.oslibs>
+        <android.oslibs/>
         <!--Global defines-->
         <global.defines>CL_FORCE_LOGO</global.defines>
         <!--Specific os defines-->
