--- a/mobile_client/pom.xml
+++ b/mobile_client/pom.xml
@@ -16,10 +16,11 @@
     <properties>
         <product.title>${mobile_client.name}</product.title>
         <!--Global libs-->
+        <ffmpeg.libs>-lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc</ffmpeg.libs>
         <qt.libs>core qml quick concurrent network sql multimedia xml</qt.libs>
         <global.libs>-lcommon -lappserver2 -lquazip -lssl -lcrypto</global.libs>
         <!--Specific os libs used-->
-        <linux.oslibs>-lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lFestival -lestools -leststring -lestbase -lmp3lame -lz -lopenal -lX11 -lXfixes -lGL -lGLU -ltermcap -lsigar -lfaac</linux.oslibs>
+        <linux.oslibs>${ffmpeg.libs} -lFestival -lestools -leststring -lestbase -lmp3lame -lz -lopenal -lX11 -lXfixes -lGL -lGLU -ltermcap -lsigar -lfaac</linux.oslibs>
         <android.oslibs/>
         <!--Global defines-->
         <global.defines>CL_FORCE_LOGO</global.defines>
